tests/negative/syntax/duplicate_decl.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that redeclaring a variable in the same scope causes a compile error.

function main() {
    let x = 10;
    let x = 20; // Error: x already defined
    
    print(x);
}
